初始化 页面

--- a/_includes/footer-minimal.html
+++ b/_includes/footer-minimal.html
@@ -1,4 +1,9 @@
 <footer class="footer-min">
+  
+</footer>
+<!-- 
+  暂时不用123
+  <footer class="footer-min">
   <div class="text-muted">
     {% if site.author %}
       {{ site.author }}
@@ -15,4 +20,4 @@
       <a href="{{ '' | absolute_url }}">{{ site.url-pretty }}</a>
     {% endif %}
   </div>
-</footer>
+</footer> -->
