--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer>
-  <div class="container-md beautiful-jekyll-footer">
+  <!--  不需要 Footer 3456
+    <div class="container-md beautiful-jekyll-footer">
     <div class="row">
       <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
       {% include social-networks-links.html %}
@@ -43,5 +44,5 @@
       </p>{% endunless %}
       </div>
     </div>
-  </div>
+  </div> -->
 </footer>
