--- a/_layouts/minimal.html
+++ b/_layouts/minimal.html
@@ -40,9 +40,9 @@ common-ext-js:
       {% endif %}
     </div>
 
-    {% include footer-minimal.html %}
+    <!-- {% include footer-minimal.html %} -->
 
-    {% include footer-scripts.html %}
+    <!-- {% include footer-scripts.html %} -->
 
   </body>
 </html>
